--- a/resources/scss/component/components/_programCard.scss
+++ b/resources/scss/component/components/_programCard.scss
@@ -7,6 +7,8 @@
     height: 100%;
   }
   .main-inner {
+    position: relative;
+    z-index: 1;
     @include tabletMore {
       max-width: 1280px;
       margin: 0 auto;
@@ -66,6 +68,11 @@
           width: 530px;
           margin-top: 0;
         }
+
+        @media screen and (min-width: 1260px) {
+          width: 720px;
+        }
+
         display: flex;
         flex-direction: column;
         gap: 40px;
@@ -76,7 +83,7 @@
           flex-wrap: wrap;
           justify-content: space-between;
           li {
-            // width: calc(50% - 20px);
+            width: calc(50% - 20px);
             @include tabletMore {
               height: 480px;
             }
@@ -88,6 +95,9 @@
             flex-direction: column;
             width: 232px;
             height: 480px;
+          }
+          @media screen and (min-width: 1260px) {
+            width: 340px;
           }
         }
       }
