--- a/resources/scss/pattern/_p_layout.scss
+++ b/resources/scss/pattern/_p_layout.scss
@@ -97,143 +97,128 @@
 // header
 #header {
   position: fixed;
-  z-index: 1000;
-  &.active {
-    &::before {
-      height: 218px;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 200;
+  @include tabletMore {
+    background: rgba(0, 0, 0, 0.1);
+    height: 80px;
+  }
+  .h_wrap {
+    position: relative;
+    height: 100%;
+    .h_top {
+      background: rgba(0, 0, 0, 0.1);
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 100;
+      height: 56px;
+      padding: 0 20px;
     }
-    .gnb__depth2 {
-      height: 218px;
-      padding: 30px 0;
+    #navDev {
+      @include tabletMore {
+        display: flex;
+        align-items: center;
+        height: 100%;
+      }
+      .navbar-dev {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+        position: fixed;
+        top: 56px;
+        right: -100%;
+        z-index: 100;
+        width: 100%;
+        height: calc(100% - 56px);
+        padding: 16px 20px 40px;
+        background: #fff;
+        @include tabletMore {
+          align-items: center;
+          display: flex;
+          flex-direction: row;
+          justify-content: flex-end;
+          gap: 2%;
+          height: auto;
+          padding: 0;
+          position: initial;
+          background: transparent;
+        }
+        li {
+          a {
+            display: block;
+            position: relative;
+            padding: 12px 52px 12px 0;
+            font-size: 18px;
+            font-weight: 700;
+            line-height: 24px;
+            letter-spacing: -0.9px;
+            @include tabletMore {
+              display: flex;
+              align-items: center;
+              height: 80px;
+              padding: 0 2vw;
+              opacity: 0.8;
+              color: #fff;
+            }
+          }
+          .sub-menu {
+            overflow: hidden;
+            height: 0;
+            @include tabletMore {
+              display: flex;
+              flex-direction: column;
+              gap: 4px;
+              position: absolute;
+              top: 62px;
+              left: 1vw;
+              overflow: hidden;
+              visibility: hidden;
+              width: 140px;
+              padding: 12px 8px;
+              border: 1px solid #dbdee1;
+              background: #fff;
+            }
+          }
+        }
+      }
     }
   }
-  &::before {
-    content: "";
-    // display: none;
-    position: absolute;
-    top: 102px;
-    left: 0;
-    right: 0;
-    height: 0;
-    background: $gray-5;
-    transition: all 0.3s;
-  }
-  .inner {
+
+  .logo {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    max-width: none;
-    height: 73px;
+    width: 230px;
+    height: 56px;
     @include tabletMore {
-      height: auto;
+      position: absolute;
+      width: 183px;
+      height: 80px;
+      z-index: 110;
     }
-  }
-  #logo {
-    transform: scale(0.8);
-    transform-origin: 0 50%;
-    @include tabletMore {
-      transform: none;
-    }
-    a {
+    .ico {
+      background: url("../../../resources/images/tvn_logo_h1.png") no-repeat 0 0 / 100% 100%;
       display: block;
-      width: 300px;
-      height: 60px;
-      background: url("../../../resources/images/tvn_logo_h1.png") no-repeat 0 0 / contain;
-    }
-    span {
-      @include sr-only;
+      width: 74px;
+      height: 38px;
     }
   }
 }
 
-#gnb {
-  display: none;
-  position: relative;
+.btn-dropdown {
+  background: url("../../../resources/images/gnb_menu_w.svg") no-repeat 50% 50% / 32px;
+  text-indent: -9999px;
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  width: 32px;
+  height: 32px;
+  margin-top: -16px;
   @include tabletMore {
-    display: block;
-  }
-  .gnb__depth1 {
-    display: flex;
-    > li {
-      position: relative;
-      &:hover {
-        > a > span {
-          color: $primary;
-          &::after {
-            width: 100%;
-          }
-        }
-      }
-      &:first-child {
-        .gnb__depth2 {
-          &::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 1px;
-            height: 100%;
-            background: $gray-20;
-          }
-        }
-      }
-      > a {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 102px;
-        padding: 0 50px;
-        font-size: 2rem;
-        font-weight: $font-bold;
-        span {
-          position: relative;
-          display: flex;
-          align-items: center;
-          height: 100%;
-          &::after {
-            content: "";
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 0;
-            height: 2px;
-            background: $primary;
-            transition: all 0.3s;
-          }
-        }
-      }
-    }
-  }
-  .gnb__depth2 {
-    overflow: hidden;
-    position: absolute;
-    top: 102px;
-    left: 0;
-    right: 0;
-    height: 0;
-    padding: 0;
-    background: $gray-5;
-    transition: all 0.3s;
-    &::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 1px;
-      height: 100%;
-      background: $gray-20;
-    }
-    a {
-      display: block;
-      padding: 7px 0;
-      text-align: center;
-      color: $gray-70;
-      &:hover {
-        font-weight: $font-bold;
-        color: $gray-90;
-      }
-    }
+    display: none;
   }
 }
 
@@ -289,13 +274,6 @@
     transform: scaleX(-1);
     &::before {
       content: "\f002";
-      @include lineAwesome;
-      font-size: 3.8rem;
-    }
-  }
-  .all-menu {
-    &::before {
-      content: "\f0c9";
       @include lineAwesome;
       font-size: 3.8rem;
     }
@@ -396,17 +374,63 @@
 }
 
 .sr-only {
-  border: 0;
-  clip: rect(0, 0, 0, 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
+  font-size: 0;
   position: absolute;
-  width: 1px;
+  top: -9999px;
+  height: 0;
 }
 
 .card-section {
   position: relative;
   background: url("../../../resources/images/backgroundImage2.png") no-repeat 0 0 / cover;
+}
+
+#footer {
+  // background: #171a1f;
+  .main-inner {
+    padding: 40px 20px;
+    .f-cont {
+      .f-top {
+        .f-logo {
+          background: url("../../../resources/images/tvn_f_logo_h1.png") no-repeat 0 0 / 100%;
+          width: 65px;
+          height: 37px;
+        }
+        .f-link {
+          padding-top: 20px;
+        }
+      }
+      .f-info {
+        padding-top: 20px;
+        ul {
+          li {
+            position: relative;
+            padding-left: 24px;
+            ::before {
+              content: "";
+              background: red;
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 20px;
+              height: 20px;
+            }
+            a {
+              font-size: 13px;
+              color: #b2b4b8;
+              line-height: 20px;
+              letter-spacing: -0.65px;
+            }
+          }
+        }
+      }
+      .copyright {
+        padding-top: 20px;
+        font-size: 13px;
+        color: #999;
+        line-height: 16px;
+        letter-spacing: -0.65px;
+      }
+    }
+  }
 }
